# avito_retrieval

./: .gitignore  README.md  answer.csv  pyproject.toml
data/cache/: queries_bge-m3.npz  queries_multilingual-e5-large.npz  rerank_calib_final5.npz  rerank_test_final5.npz
notebooks/: final_submission.ipynb
src/: common.py
